@@ -4,6 +4,8 @@ CHANGES.txt - 2009-01-14
 CHANGES IN CUPS V1.4b3
 
 	- Documentation fixes (STR #3044, STR #3057)
+	- The scheduler did not set the printer-commands attribute correctly
+	  for some PPDs.
 	- The ppdi utility did not work.
 	- The web interface no longer uses multi-part output with old or broken
 	  web browsers (STR #3049)
